--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_slidable: ^3.0.1
+  flutter_riverpod: ^2.4.9
+  slideable: ^0.0.2
+  sqflite: ^2.3.2
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
