--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,16 @@ dependencies:
   flutter_slidable: ^3.0.1
   flutter_riverpod: ^2.4.9
   slideable: ^0.0.2
-  sqflite: ^2.3.2
   path: ^1.8.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.8
 
 flutter:
   uses-material-design: true
