--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,7 @@ dependencies:
   flutter_slidable: ^3.0.1
   flutter_riverpod: ^2.4.9
   slideable: ^0.0.2
-  sqflite: ^2.3.2
-  path: ^1.8.3
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
